--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,31 @@
 {{ define "content" }}
-<p class="lead">
-  <a href="/post/new">Start a post</a>
-</p>
 
-{{ range . }}
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <span class="lead"> <i class="fa fa-address-book-o"></i> {{ .Title }}</span>
-    </div>
-    <div class="panel-body">
-      {{ .Content }}
-      <div class="pull-right">
-        <a href="/post/read?id={{ .Id }}">Read more</a>
-      </div>
-    </div>
-  </div>
-{{ end }}
+<main class="contentlist" role="main">
+	<section class="contentlist_inner">
+		{{ range . }}
+		<article itemscope itemtype="http://schema.org/BlogPosting" role="article" class="post_item">
+			<header class="post_item_header">
+				<h2 itemprop="name" class="post_item_title">
+					<a href="urltest" itemprop="url" data-pjax title="{{ .Title }}">
+						{{ .Title }}
+					</a>
+				</h2>
+			</header>
+			<section itemprop="description" class="post_item_excerpt">
+				<p>{{ .Content }}&hellip;&nbsp;<a href="urltest" itemprop="url">»</a></p>
+			</section>
+			<footer class="post_item_footer">
+				<ul class="post_item_meta_list">
+					<li class="post_item_meta_item">
+						<time datetime="2012-01-01" itemprop="datePublished">
+                24 days ago
+						</time>
+					</li>
+				</ul>
+			</footer>
+		</article>
+		{{ end }}
+	</section>
+</main>
 
 {{ end }}
