--- a/templates/public.post.html
+++ b/templates/public.post.html
@@ -1,23 +1,25 @@
 {{ define "content" }}
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <span class="lead"> <i class="fa fa-comment-o"></i> {{ .Topic }}</span>
-    <div class="pull-right">
-      Started by {{ .User.Name }} - {{ .CreatedAtDate }}
-    </div>
-
-  </div>
-  
-  {{ range .Posts }}
-  <div class="panel-body">
-    <span class="lead"> <i class="fa fa-comment"></i> {{ .Body }}</span>
-    <div class="pull-right">
-      {{ .User.Name }} - {{ .CreatedAtDate }}
-    </div>    
-  </div>
-  {{ end }}    
-
-</div>
+<main class="content contentpost" role="main">
+  <article class="contentpost_inner post" itemscope="" itemtype="http://schema.org/BlogPosting" role="article">
+      <span class="contentpost_meta"><a href="/tag/programming/">programming</a></span>
+      <h1 class="contentpost_headline post-title" itemprop="url" data-pjax="" title="{{ .Title}}">{{ .Title }}</h1>
+      <section class="contentpost_articlecontent post-content">
+          {{ .Content}}
+      </section>
+      <footer class="contentpost_footer post-footer">
+          <section class="share">
+                <a href="https://twitter.com/share?text={{ .Title }}&amp;url=''" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;" title="Share on Twitter"><i class="fa fa-twitter fa-lg share_symbol twitter_symbol"></i></a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=''" onclick=" window.open(this.href, 'facebook-share','width=580,height=296');return false;" title="Share on Facebook"><i class="fa fa-facebook fa-lg share_symbol facebook_symbol"></i></a>
+                <a href="https://plus.google.com/share?url=''" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;" title="Share on Google+"><i class="fa fa-google-plus fa-lg share_symbol google-plus_symbol"></i></a>
+            </section>
+          <div class="contentpost_footerbar">
+              <section class="contentpost_sidebar_meta clearfix">
+                  <h5>Published:</h5><time datetime="2019-03-07">07 Mar 2019</time>
+              </section>
+          </div>
+      </footer>
+  </article>
+</main>
 
 {{ end }}
