--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,20 @@ code {
   background: none repeat scroll 0% 0% #F7FAFB;
   border: 1px solid #E3EDF3; }
 
+  button {
+    margin: 0 auto;
+  }
+  
+  textarea {
+      border:1px solid #999999;
+      width:95%;
+      margin:5px 5px 5px 5px;
+      padding:5px; }   
+  
+  .justified {
+    display: flex;
+    justify-content: center; }
+  
 .sidebar {
   color: white; }
   @media only screen and (min-width: 921px) {
@@ -419,3 +433,9 @@ code {
 .contentpost_footer_page {
   padding: 1em 0;
   margin-bottom: 2em; }
+
+.boxsizingBorder {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
