--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,12 @@
     
     <script src="/static/js/jquery-2.1.1.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/autosize.min.js"></script>
+    <script>
+      $(document).ready(function(){
+        $('textarea').autosize();   
+      });
+</script>
   </body>
 </html>
 
