--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 			<footer class="post_item_footer">
 				<ul class="post_item_meta_list">
 					<li class="post_item_meta_item">
-						<time datetime="2012-01-01" itemprop="datePublished">24 days ago </time>
+						<time datetime="2012-01-01" itemprop="datePublished">{{ .Created}} {{.ID}}</time>
 					</li>
 				</ul>
 			</footer>
