--- a/templates/new.post.html
+++ b/templates/new.post.html
@@ -5,7 +5,9 @@
   <h1>New post</h1>
   <div class="form-group">
     <textarea class="justified" name="title" id="title" placeholder="Title" rows="1"></textarea><br/>
-    <textarea class = "justified" name="content" id="content" placeholder="Content" rows="10"></textarea><br/>
+    <textarea class="justified" name="slug" id="slug" placeholder="Slug" rows="1"></textarea><br/>
+    <textarea class = "justified" name="content" id="content" placeholder="Content" rows="5"></textarea><br/>
+    <textarea class = "justified" name="markdown" id="markdown" placeholder="Markdown" rows="5"></textarea><br/>
     <button class="justified" type="submit">Save</button>
   </div>
 </form>
