--- a/templates/login.html
+++ b/templates/login.html
@@ -2,8 +2,8 @@
 
 <form class="form-signin center" role="form" action="/authenticate" method="post">
   <h2 class="form-signin-heading">
-    <i class="fa fa-comments-o">
-      ChitChat
+    <i class="fa">
+      Sign in
     </i>
   </h2>
   <input type="username" name="username" class="form-control" placeholder="Username" required autofocus>
@@ -11,7 +11,6 @@
   <br/>
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   <br/>
-  <a class="lead pull-right" href="/signup">Sign up</a>
 </form>
 
 {{ end }}
