page implementation master

--- a/templates/public.navbar.html
+++ b/templates/public.navbar.html
@@ -10,8 +10,8 @@
           <a href="http://www.linkedin.com" target="_blank" title="LinkedIn"><i class="fa fa-linkedin-square fa-lg sidebar_symbol linkedin_symbol"></i></a>
       </div>
       <h2 class="sidebar_link"><a href="/">Blog</a></h2>
-      <h2 class="sidebar_link"><a href="/about">About</a></h2>
-      <h2 class="sidebar_link"><a href="/projects">Projects</a></h2>
+      <h2 class="sidebar_link"><a href="/page?id=about">About</a></h2>
+      <h2 class="sidebar_link"><a href="/page?id=projects">Projects</a></h2>
   </div>
 </header>
 {{ end }}
