--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 				</h2>
 			</header>
 			<section itemprop="description" class="post_item_excerpt">
-				<p>{{ .Content }}&hellip;&nbsp;<a href="/post?id={{ .Slug }}" itemprop="url">»</a></p>
+				<p>{{ .HTML }}&hellip;&nbsp;<a href="/post?id={{ .Slug }}" itemprop="url">»</a></p>
 			</section>
 			<footer class="post_item_footer">
 				<ul class="post_item_meta_list">
