--- a/templates/new.post.html
+++ b/templates/new.post.html
@@ -1,13 +1,13 @@
 {{ define "content" }}
 
 <main class="content contentpost" role="main">
-  <form role="form" action="/post/create" method="post">
+  <form role="form" name="form1" id="form1" action="/post/create" method="post">
   <h1>New post</h1>
   <div class="form-group">
-    <textarea class="justified" name="title" id="title" placeholder="Title" rows="1"></textarea><br/>
-    <textarea class="justified" name="slug" id="slug" placeholder="Slug" rows="1"></textarea><br/>
-    <textarea class = "justified" name="content" id="content" placeholder="Content" rows="5"></textarea><br/>
-    <textarea class = "justified" name="markdown" id="markdown" placeholder="Markdown" rows="5"></textarea><br/>
+    <textarea class="justified" name="title" id="title" placeholder="Title" rows="1"></textarea>
+    <textarea class="justified" name="slug" id="slug" placeholder="Slug" rows="1"></textarea>
+    <textarea class = "justified" name="content" id="content" placeholder="Content"></textarea>
+    <input type="hidden" name="html" id="html" />
     <button class="justified" type="submit">Save</button>
   </div>
 </form>
@@ -15,7 +15,11 @@
 
 <script>
   $(document).ready(function(){
-    $('#content').autosize();   
+    var simplemde = new SimpleMDE({ element: $("#content")[0] });
+    simplemde.value("Content");
+    simplemde.codemirror.on("change", function(){
+      $("#html").val(simplemde.options.previewRender(simplemde.value()));
+    });
 });
 </script>
 {{ end }}
