--- a/templates/login.layout.html
+++ b/templates/login.layout.html
@@ -6,20 +6,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=9">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cherry Log in</title>
+    <title>Cherry Personal Blog</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/static/css/login.css" rel="stylesheet">
+    <link href="/static/css/simplemde.min.css" rel="stylesheet" type="text/css">
+
+    <script src="/static/js/jquery-2.1.1.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/simplemde.min.js"></script>
   </head>
   <body>
     <div class="container">
       
       {{ template "content" . }}
       
-    </div> <!-- /container -->
-    
-    <script src="/static/js/jquery-2.1.1.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
+    </div>
   </body>
 </html>
 
