--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,12 @@
 				</h2>
 			</header>
 			<section itemprop="description" class="post_item_excerpt">
-				<p>{{ .Content }}&hellip;&nbsp;<a href="/post?id={{ .Slug }}" itemprop="url">»</a></p>
+				<p>{{ .Summary }}&hellip;&nbsp;<a href="/post?id={{ .Slug }}" itemprop="url">»</a></p>
 			</section>
 			<footer class="post_item_footer">
 				<ul class="post_item_meta_list">
 					<li class="post_item_meta_item">
-						<time datetime="2012-01-01" itemprop="datePublished">{{ .Created}} {{.ID}}</time>
+						<time datetime="2012-01-01" itemprop="datePublished">{{ .DateCreated}} {{.ID}}</time>
 					</li>
 				</ul>
 			</footer>
